--- a/main.tex
+++ b/main.tex
@@ -298,12 +298,6 @@ physically grounded.
 
 The pseudo-system contains only one proton. However, the effective charge felt by the $p$ electron in a carbon atom should be larger: for instance Slater's rules suggest an effective charge of $Z_{eff}=2.4$. Thus we must account for this difference. We shall see that this role is filled by the $p$ potential once optimised. 
 
-%%As mentioned in Section~\ref{secpotdef}, $s$ potentials aim at recovering
-%As mentioned above, the $s$ potentials aim at recovering both the bi-electronic interactions \textit{and} the no-collapse term. The \(p\) pseudo-potential has the role of providing a correction which represents the incomplete screening effect of the missing electrons.
-%It is possible to obtain the potential parameters entirely by empirical means, in principle. However, we felt we ought to be able to make a more informed guess at some starting parameters from which to optimise. 
-%
-%Clearly the assumption that \(Z_{nucleus} = 1\) is unrealistic for a carbon atom. Slater's Rules\cite{slatersrules} suggest that
-%a \(p\) electron should experience a larger charge, of \(Z = 2.4\). 
 In order to evaluate the screening effect in the real CH\(^{\bullet}_{3}\) system, we computed the expectation value of the distance of the electron from the nucleus \( \langle r \rangle \)~:
 \begin{equation}
 \langle r \rangle = \langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle \approx 1.8\;a.u.\
@@ -331,21 +325,6 @@ This leads to the following expression for \( \langle r \rangle (Z_{eff}) \);
 
 From Equations~\ref{equation:exp_r} and ~\ref{equation:PsirPsi}, we obtain the theoretical value of \(Z_{eff} \approx 2.77\).
 
-%d therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). Even if we shall use the semi-local pseudo-potential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
-%  
-%To mimic the effect of an electron-screened nucleus, we can use a \(p_{z}\) pseudo-potential. In order to make an educated guess of the parameters of this new potential, we need to find an expression for \(Z_{eff}(\langle r \rangle)\); \(Z_{eff}\) being the total nuclear attraction the electron would feel in the real CH\(^{\bullet}_{3}\) system, taking into account the screening effect of the core electrons that would be present in an all-electron model; and \( \langle r \rangle \) being the expected distance of the electron from the nucleus.
-%
-%The analytical form of the \(p_{z}\) orbital for a hydrogen-like atom is \cite{nyu_h_solutions}
-%and from this we obtain 
-%Next, we need to find a value for \( \langle r \rangle \). We can do this by calculating
-
-%\begin{equation}
-%\langle r \rangle = \langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle
-%\label{equation:exp_r}
-%\end{equation}
-
-%where \(\psi_{p_{z}}\) are the molecular orbitals extracted from a reference calculation of CH\(^{\bullet}_{3}\). From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). 
-
 The \(\psi_{p_{z}}\) molecular orbital is influenced strongly by the $p$ pseudo-potential,
 because of their overlap. In this pargraph we use a simplified definition $\widehat{p}$ of the $p$ pseudo-potential, which allows for a quick evaluation of overlap effects with the basis set: 
 \begin{equation}
@@ -358,13 +337,12 @@ S = \langle \psi_{p_{z}} | \chi \rangle
 the overlap between a molecular orbital \(\psi_{p_{z}}\), and \(\chi\),
 leading us to evaluate the effect of the pseudo-potential on the \(\psi_{p_{z}}\) molecular orbital as:
 \begin{equation}
-\langle \psi_{p_{z}} | \widehat{Z} | \psi_{p_{z}} \rangle = \langle \psi_{p_{z}} |-Z_{pseudo} | \chi \rangle \langle \chi | \psi_{p_{z}} \rangle = -Z_{pseudo} S^{2}
+\langle \psi_{p_{z}} | \widehat{p} | \psi_{p_{z}} \rangle = \langle \psi_{p_{z}} | -A | \chi \rangle \langle \chi | \psi_{p_{z}} \rangle = -A S^{2}
 \end{equation}
 Finally, knowing that our hydrogen-like pseudo-system already contains a charge, \(Z_{nucleus}=1\), 
 we expect that:
-%the coefficient $-Z_{pseudo}$ of the pseudo-potential becomes:
 \begin{equation}
-Z_{pseudo} = (Z_{eff} - Z_{nucleus})S^{-2}
+A = (Z_{eff} - Z_{nucleus})S^{-2}
 \label{eqpseudo}
 \end{equation}
 
